<resources>
    <string name="app_name">Back 2 College</string>
    <string name="registerNumber_text">Register Number</string>
    <string name="register_btn">Create Account</string>
    <string name="select_date">Date of birth</string>
    <string name="department">Department</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="rollNumber_text">Roll Number</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Department</string>
    <string name="tab_text_3">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="aero">Aero</string>
    <string name="auto">Auto</string>
    <string name="bioinfo">BioInfo</string>
    <string name="biomed">BioMed</string>
    <string name="civil">Civil</string>
    <string name="cse">CSE</string>
    <string name="ece">ECE</string>
    <string name="eee">EEE</string>
    <string name="eie">EIE</string>
    <string name="etce">ETCE</string>
    <string name="it">IT</string>
    <string name="mech">MECH</string>
    <string name="mnp">MnP</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="delete">Delete</string>
    <string name="pin_to_homescreen">Pin to homescreen</string>
    <string name="sample_relative_time">just now</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="share">Share</string>
    <string name="confirmDelete">Confirm Delete?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back_to_college">Welcome back to college</string>
    <string name="allow_permission">Allow necessary permission</string>
    <string name="signout">Sign Out</string>
    <string name="photo_view">This is photoView</string>
    <string name="profileQR">QR for profile</string>
    <string name="image">Image for post</string>
    <string name="abhishek_kumar">Abhishek Kumar</string>
    <string name="splash">Splash</string>
    <string name="close_btn">Close Btn</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="complete_your_profile">Complete your profile.</string>
    <string name="basic_information">Basic Information</string>
    <string name="personal_information">Personal Information</string>
    <string name="back_btn">Back</string>
    <string name="filter">Filter</string>
    <string name="addMedia">Add Media</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="addpostImg">Add Image</string>
    <string name="select_all">Select ALL</string>
    <string name="select_department_s">Select department(s)</string>
    <string name="submit">Submit</string>
    <string name="more_options">More Options</string>
    <string name="avatar">Avatar</string>
    <string name="widget_img">Image</string>
    <string name="addpost">Add post</string>
    <string name="new_post">New Post</string>
    <string name="noInternet">No internet connection available.</string>
    <string name="subsribed">Subscribed</string>
    <string name="notSubscribed">Not subscribed to notifications.</string>
    <string name="google_sign_failed">Google sign in failed</string>
    <string name="check_connection">Please check your internet connection and try again.</string>
    <string name="welcome">Welcome,</string>
    <string name="addingPost">Adding Post\"</string>
    <string name="click_to_save">Click to save</string>
    <string name="will_be_saved">Image will be saved in background</string>


</resources>
