<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearBottomSheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="#fff"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textSize="22sp"
        android:text="@string/select_department_s"/>
    <CheckBox
        android:id="@+id/allCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_all"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/backgroundColor"/>
    <LinearLayout android:id="@+id/checkBoxes"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:background="#fff"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBox
        android:id="@+id/aeroCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aero"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/autoCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/bioInfoCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bioinfo"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/bioMedCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biomed"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/civilCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/civil"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/cseCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cse"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/eceCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ece"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    <CheckBox
        android:id="@+id/eeeCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eee"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>

    <CheckBox
        android:id="@+id/eieCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eie"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>

    <CheckBox
        android:id="@+id/etceCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etce"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>

    <CheckBox
        android:id="@+id/itCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/it"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>

    <CheckBox
        android:id="@+id/mechCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mech"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>

    <CheckBox
        android:id="@+id/mnpCB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mnp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundColor"/>
    </LinearLayout>
    <Button
        android:layout_margin="16dp"
        android:id="@+id/bs_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:text="@string/submit" />
</LinearLayout>