<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textColor"
        tools:context=".ui.RegisterActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textColor"
            android:visibility="gone"
            tools:context=".ui.RegisterActivity">


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splash" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerDetails_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/textColor"
            android:visibility="visible"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorButton"
                android:text="@string/register_btn"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                tools:layout_editor_absoluteX="24dp" />


            <ImageButton
                android:id="@+id/close_btn_registerDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_close_24" />

            <LinearLayout
                android:id="@+id/department_text_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rollNumber_text_container">

                <Spinner
                    android:id="@+id/department_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/department"
                    android:textColor="@color/colorButtonSecondary"
                    android:textColorHint="@color/colorButtonSecondary"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile_text_container">

                <TextView
                    android:id="@+id/date_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/username_container"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="5dp"
                    android:text="Date of birth"
                    android:textColor="@color/colorButtonSecondary"
                    android:textColorHint="@color/colorButtonSecondary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerNumber_text_container" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="15dp"
                    android:hint="@string/select_date"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorButtonSecondary"
                    android:textColorHint="@color/colorButtonSecondary"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/userEmail_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/view_background"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="sample_email@domainname.com"
                android:textColor="@color/colorButtonSecondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_TV" />

            <TextView
                android:id="@+id/username_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/view_background"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="Welcome, Abhishek Kumar"
                android:textColor="@color/colorButtonSecondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="84dp"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="Complete your profile."
                android:textColor="@color/colorButtonSecondary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="Basic Information"
                android:textColor="@color/colorButtonSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmail_TV" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="Personal Information"
                android:textColor="@color/colorButtonSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/department_text_container" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registerNumber_text_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_container"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="5dp"
                android:textColor="@color/colorButtonSecondary"
                android:textColorHint="@color/colorButtonSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <EditText
                    android:id="@+id/registerNumber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/registerNumber_text"
                    android:inputType="number"
                    android:textColor="@color/colorButtonSecondary"
                    android:textColorHint="@color/colorButtonSecondary"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rollNumber_text_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_container"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="5dp"
                android:textColor="@color/colorButtonSecondary"
                android:textColorHint="@color/colorButtonSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerNumber_text_container">

                <EditText
                    android:id="@+id/rollrNumber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/rollNumber_text"
                    android:textColor="@color/colorButtonSecondary"
                    android:textColorHint="@color/colorButtonSecondary"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_text_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_container"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:padding="5dp"
                android:textColor="@color/colorButtonSecondary"
                android:textColorHint="@color/colorButtonSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <EditText
                    android:id="@+id/mobile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/mobileNumber"
                    android:inputType="number"
                    android:textColor="@color/colorButtonSecondary"
                    android:textColorHint="@color/colorButtonSecondary"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_account_circle_24"
                android:tint="@color/colorButtonSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
